CQRS, Identity API + JWT Auth

--- a/src/core/RhythmicJourney.Application/RhythmicJourney.Application.csproj
+++ b/src/core/RhythmicJourney.Application/RhythmicJourney.Application.csproj
@@ -10,4 +10,9 @@
     <ProjectReference Include="..\RhythmicJourney.Core\RhythmicJourney.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.1.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+  </ItemGroup>
+
 </Project>
