--- a/src/ui/RhythmicJourney.WebAPI/appsettings.json
+++ b/src/ui/RhythmicJourney.WebAPI/appsettings.json
@@ -2,8 +2,19 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.AspNetCore.Authentication": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ConnectionString_Standart": "server=.\\antikserver; database=RhythmicJourneyDB_Standart; trusted_connection=true; TrustServerCertificate=True;",
+    "ConnectionString_Identity": "server=.\\antikserver; database=RhythmicJourneyDB_Identity; trusted_connection=true; TrustServerCertificate=True;"
+  },
+  "JwtSettings": {
+    "SecretKey": "k8R|&eD&2D\\U&yrISxNJ\\E\\P+_iB3SI5d`T2Yy8#IC`a<=N,v_",
+    "ExpiryMinutes": 10,
+    "Issuer": "RhythmicJourney",
+    "Audience": "RhythmicJourney"
+  }
 }
