--- a/src/external/RhythmicJourney.Infrastructure/RhythmicJourney.Infrastructure.csproj
+++ b/src/external/RhythmicJourney.Infrastructure/RhythmicJourney.Infrastructure.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.32.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\RhythmicJourney.Persistence\RhythmicJourney.Persistence.csproj" />
   </ItemGroup>
 
