Improved JWT Auth & implemented Refresh Token

--- a/src/ui/RhythmicJourney.WebAPI/appsettings.json
+++ b/src/ui/RhythmicJourney.WebAPI/appsettings.json
@@ -12,8 +12,10 @@
     "ConnectionString_Identity": "server=.\\antikserver; database=RhythmicJourneyDB_Identity; trusted_connection=true; TrustServerCertificate=True;"
   },
   "JwtSettings": {
-    "SecretKey": "k8R|&eD&2D\\U&yrISxNJ\\E\\P+_iB3SI5d`T2Yy8#IC`a<=N,v_",
-    "ExpiryMinutes": 10,
+    "AccessTokenSecretKey": "pm3xsa@YY~X!gIpm3xsa@YY~X!gIiRExTr7q^gBt3cexf(p#wKy^rFF4tN5={IFUiRExTr7q^gBKy^rFF4tN5={IFUtpm3xsa@YY~X!gIiRExTr7q^gBt3cexf(p#wKy^rFF4tN5={IFU3cexf(p#wKy^rFF4tN5={IFU",
+    "RefreshTokenSecretKey": "q4]l#+';P[x_bOPq4]l#+';P[x_bOP=mq4]l#+';P[x_bOP=m&eal7[!N3mktTU'i9Ft%7'(C9Pr)%e7[!N3mktTU'i9Ft%7'(Cg7g&eal7[!N3mktTU'i9Ft%7'(C9Pr)%eg7g=m&eal7[!N3mktTU'i9Ft%7'(C9Pr)%eg7g",
+    "AccessTokenExpirationInMinutes": 1,
+    "RefreshTokenExpirationInDays": 1,
     "Issuer": "RhythmicJourney",
     "Audience": "RhythmicJourney"
   }
