added account confirmation via email

--- a/src/ui/RhythmicJourney.WebAPI/appsettings.json
+++ b/src/ui/RhythmicJourney.WebAPI/appsettings.json
@@ -18,5 +18,12 @@
     "RefreshTokenExpirationInDays": 1,
     "Issuer": "RhythmicJourney",
     "Audience": "RhythmicJourney"
+  },
+  "HotmailSettings": {
+    "Host": "smtp-mail.outlook.com",
+    "Port": 587,
+    "EnableSSL": true,
+    "DeveloperEmail": "#LOGIN#",
+    "DeveloperPassword": "#PASSWORD#"
   }
 }
