--- a/src/ui/RhythmicJourney.WebAPI/appsettings.json
+++ b/src/ui/RhythmicJourney.WebAPI/appsettings.json
@@ -23,6 +23,7 @@
     "Host": "smtp-mail.outlook.com",
     "Port": 587,
     "EnableSSL": true,
+    "Timeout": 60000,
     "DeveloperEmail": "#LOGIN#",
     "DeveloperPassword": "#PASSWORD#"
   }
